--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,7 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
-     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/animaciones.css">
 </head>
 
 <body>
@@ -79,9 +80,8 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating mb-4">
-                                        <textarea class="form-control bg-dark text-white border-secondary"
-                                            placeholder="Deja tu mensaje aquí" id="mensaje"
-                                            style="height: 150px"></textarea>
+                                        <textarea class="form-control bg-dark text-white border-secondary h-150"
+                                            placeholder="Deja tu mensaje aquí" id="mensaje"></textarea>
                                         <label for="mensaje" class="text-secondary">Mensaje</label>
                                     </div>
                                 </div>
