--- a/pages/planes.html
+++ b/pages/planes.html
@@ -4,87 +4,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planes Cheese</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    
+    <title>Nuestros Planes - Cheese</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;500;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <style>
+        body {
+            background: transparent !important;
+            color: #fff;
+            font-family: 'Outfit', sans-serif;
+        }
+
+        .plan-card {
+            border-radius: 2rem;
+            transition: all 0.3s ease;
+            height: 100%;
+            position: relative;
+        }
+
+        .card-body {
+            padding: 3rem 2rem;
+        }
+
+        .badge-popular {
+            background: #FFD700;
+            color: #000;
+            font-weight: 900;
+            font-size: 0.7rem;
+            text-transform: uppercase;
+            border-radius: 0.5rem;
+            padding: 0.4rem 0.8rem;
+            position: absolute;
+            top: -12px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
+    </style>
 </head>
 
 <body class="p-4">
-    <div class="container py-4">
-        <h2 class="text-center mb-5" style="color: var(--primary); font-weight: 900; font-size: 3rem;">Nuestros Planes
-        </h2>
+    <div class="container pb-5">
+        <h2 class="text-center mb-5 display-5 fw-black text-white">Nuestros Planes</h2>
         <div class="row g-4 justify-content-center">
+            <!-- Free Plan -->
             <div class="col-md-4">
-                <div class="card h-100 border-0 shadow-sm text-white plan-card"
-                    style="background: var(--glass-bg); backdrop-filter: blur(10px); border: 1px solid var(--glass-border); border-radius: 24px;">
-                    <div class="card-body p-4 d-flex flex-column">
-                        <h3 class="card-title text-center mb-3 fw-bold">Gratis</h3>
-                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">0€</div>
-                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Perfiles limitados</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> 5 Super Cheese al día</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Chat con matches</li>
+                <div class="card plan-card plan-card-outline text-white">
+                    <div class="card-body text-center d-flex flex-column">
+                        <h3 class="h4 fw-bold mb-4">Gratis</h3>
+                        <div class="display-3 fw-black mb-5">0€</div>
+                        <ul class="list-unstyled text-start flex-grow-1 mb-5 opacity-75">
+                            <li class="mb-3">✓ Perfiles limitados</li>
+                            <li class="mb-3">✓ 5 Super Cheese al día</li>
+                            <li class="mb-3">✓ Chat con matches</li>
                         </ul>
-                        <button class="btn btn-outline-light w-100 rounded-pill mt-auto py-3">Actual</button>
+                        <button class="btn btn-outline-white rounded-pill py-3 fw-bold">Actual</button>
                     </div>
                 </div>
             </div>
+            <!-- Gold Plan -->
             <div class="col-md-4">
-                <div class="card h-100 text-white plan-card"
-                    style="background: rgba(255, 215, 0, 0.05); backdrop-filter: blur(10px); border: 2px solid var(--primary); border-radius: 24px; transform: scale(1.05); box-shadow: 0 0 30px rgba(255, 215, 0, 0.1);">
-                    <div class="card-body p-4 d-flex flex-column">
-                        <div class="text-center mb-2"><span class="badge bg-primary text-dark fw-bold px-3">Más
-                                Popular</span></div>
-                        <h3 class="card-title text-center mb-3 fw-black">Gold</h3>
-                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">14.99€<span
-                                class="fs-6 text-secondary">/mes</span></div>
-                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Likes ilimitados</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Ver a quién le gustas</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Rebobinar (Rewind)</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> 10 Super Cheese al día</li>
+                <div class="card plan-card plan-card-gold text-white" style="background: rgba(255,215,0,0.03);">
+                    <div class="badge-popular">Más Popular</div>
+                    <div class="card-body text-center d-flex flex-column">
+                        <h3 class="h4 fw-bold mb-4">Gold</h3>
+                        <div class="display-3 fw-black mb-1">14.99€<span class="fs-6 opacity-50">/mes</span></div>
+                        <ul class="list-unstyled text-start flex-grow-1 mb-5">
+                            <li class="mb-3">✓ Likes ilimitados</li>
+                            <li class="mb-3">✓ Ver a quién le gustas</li>
+                            <li class="mb-3">✓ Rebobinar (Rewind)</li>
+                            <li class="mb-3">✓ 10 Super Cheese al día</li>
                         </ul>
-                        <button class="btn btn-primary w-100 rounded-pill fw-bold mt-auto py-3">Elegir Gold</button>
+                        <button class="btn btn-gold rounded-pill py-3 fw-bold">Elegir Gold</button>
                     </div>
                 </div>
             </div>
+            <!-- Platinum Plan -->
             <div class="col-md-4">
-                <div class="card h-100 border-0 shadow-sm text-white plan-card"
-                    style="background: var(--glass-bg); backdrop-filter: blur(10px); border: 1px solid var(--glass-border); border-radius: 24px;">
-                    <div class="card-body p-4 d-flex flex-column">
-                        <h3 class="card-title text-center mb-3 fw-bold">Platinum</h3>
-                        <div class="price text-center display-4 fw-bold mb-4" style="color: var(--primary);">39.99€<span
-                                class="fs-6 text-secondary">/mes</span></div>
-                        <ul class="features-list list-unstyled mb-4 flex-grow-1">
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Todo lo de Gold</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Mensaje antes de match</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Prioridad en likes</li>
-                            <li class="mb-3 d-flex align-items-center"><span
-                                    class="badge bg-primary rounded-circle p-1 me-2"></span> Ver confirmación lectura
-                            </li>
+                <div class="card plan-card plan-card-outline text-white">
+                    <div class="card-body text-center d-flex flex-column">
+                        <h3 class="h4 fw-bold mb-4">Platinum</h3>
+                        <div class="display-3 fw-black mb-1">39.99€<span class="fs-6 opacity-50">/mes</span></div>
+                        <ul class="list-unstyled text-start flex-grow-1 mb-5 opacity-75">
+                            <li class="mb-3">✓ Todo lo de Gold</li>
+                            <li class="mb-3">✓ Mensaje antes de match</li>
+                            <li class="mb-3">✓ Prioridad en likes</li>
+                            <li class="mb-3">✓ Ver confirmación lectura</li>
                         </ul>
-                        <button class="btn btn-outline-primary w-100 rounded-pill mt-auto py-3">Elegir Platinum</button>
+                        <button class="btn btn-outline-primary rounded-pill py-3 fw-bold"
+                            style="border-color: #FFD700 !important; color: #FFD700 !important;">Elegir
+                            Platinum</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
