cambios estructura planes

--- a/index.html
+++ b/index.html
@@ -96,12 +96,10 @@
 
 
                             <div class="map-ui-bottom">
-                                <span>Explorando... 🧀</span>
+                                <span>Explorando...</span>
                             </div>
                         </div>
                     </div>
-
-
 
                 </div>
             </div>
