cambio ventana "Contáctanos"

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -49,9 +49,10 @@
     <div class="container py-5 mt-5">
         <div class="row justify-content-center">
             <div class="col-lg-8">
-                <div class="card shadow-lg border-0 bg-custom-card">
+                <div class="card shadow-lg border-0 bg-black text-white">
                     <div class="card-body p-5">
-                        <h2 class="text-center mb-4 display-5 fw-bold text-primary">Contáctanos</h2>
+                        <h2 class="text-center mb-4 display-5 fw-bold" style="color: var(--primary) !important;">
+                            Contáctanos</h2>
                         <p class="text-center text-secondary mb-5">¿Tienes alguna duda o sugerencia? ¡Estamos aquí para
                             escucharte!</p>
 
@@ -59,28 +60,28 @@
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <input type="text" class="form-control bg-dark text-white border-secondary"
+                                        <input type="text" class="form-control bg-white text-dark border-secondary"
                                             id="nombre" placeholder="Tu Nombre">
                                         <label for="nombre" class="text-secondary">Nombre</label>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-floating mb-3">
-                                        <input type="email" class="form-control bg-dark text-white border-secondary"
+                                        <input type="email" class="form-control bg-white text-dark border-secondary"
                                             id="email" placeholder="name@example.com">
                                         <label for="email" class="text-secondary">Email</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating mb-3">
-                                        <input type="text" class="form-control bg-dark text-white border-secondary"
+                                        <input type="text" class="form-control bg-white text-dark border-secondary"
                                             id="asunto" placeholder="Asunto">
                                         <label for="asunto" class="text-secondary">Asunto</label>
                                     </div>
                                 </div>
                                 <div class="col-12">
                                     <div class="form-floating mb-4">
-                                        <textarea class="form-control bg-dark text-white border-secondary h-150"
+                                        <textarea class="form-control bg-white text-dark border-secondary h-150"
                                             placeholder="Deja tu mensaje aquí" id="mensaje"></textarea>
                                         <label for="mensaje" class="text-secondary">Mensaje</label>
                                     </div>
