--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@
                         aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-0">
-                    <iframe src="pages/planes.html"
-                        style="width: 100%; height: 85vh; border: none; overflow: hidden;"></iframe>
+                    <iframe src="pages/planes.html" style="width: 100%; height: 85vh; border: none;"></iframe>
                 </div>
             </div>
         </div>
