--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,7 +50,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-8">
                 <div class="card shadow-lg border-0 bg-black text-white">
-                    <div class="card-body p-5">
+                    <div class="card-body p-3 p-md-5">
                         <h2 class="text-center mb-4 display-5 fw-bold" style="color: var(--primary) !important;">
                             Contáctanos</h2>
                         <p class="text-center text-secondary mb-5">¿Tienes alguna duda o sugerencia? ¡Estamos aquí para
